--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .profile-image {
@@ -45,4 +50,26 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+/* NEW */
+.container-1 {
+  background-color: rgb(206, 233, 233);
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.container-1 ul {
+  display: flex;
+  gap: 16px;
+  margin: 0;
+  padding: 0;
+}
+
+.container-2 {
+  background-color: antiquewhite;
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
