Complete flexbox exercise 7

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -27,3 +27,52 @@ body {
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
 }
+
+/* NEW STUFF BELOW */
+
+.header {
+  display: flex;
+  font-size: 32px;
+  font-weight: 900;
+  align-items: center;
+  padding-left: 16px;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mid {
+  display: flex;
+}
+
+.sidebar {
+  min-width: 300;
+  flex-shrink: 0;
+  padding: 16px;
+}
+
+.card-box {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 48px;
+  gap:  32px;
+}
+
+.card {
+  width: 250px;
+}
+
+a {
+  color: white;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
